--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -11,7 +11,9 @@
   <div class="seperator"></div>
   <ul>
     <% @episode.contestants.each do |contestant|%>
-        <li><span class="h4"><%= contestant.name %></span>, <%= contestant.note %></li>
+        <li><span class="h4">
+          <%= link_to contestant.name, contestant_path(contestant) %></span>,
+          <%= contestant.note %></li>
     <% end %>
   </ul>
   <% @episode.boards.each do |board| %>
