--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,18 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 body {
   margin-top: 10px;
   margin-bottom: 20px;
@@ -9,14 +21,6 @@ body {
   margin-top: 20px;
 }
 
-.board{
-  border: 3px solid black;
-  table-layout: fixed;
-  display: block;
-  margin-top: 20px;
-  border-collapse: collapse;
-  border-radius: 4px;
-}
 .form-container {
   width: 1420px;
   margin-left: auto;
@@ -31,10 +35,6 @@ body {
   display: block;
 }
 
-.striped {
-  background-color: grey;
-}
-
 .edit-column {
   display: inline;
 }
@@ -47,10 +47,7 @@ body {
 }
 .box {
   color: white;
-  background-color: #060CE9;
   padding: 4px;
-  width: 220px;
-  //height: 150px;
   max-width: 220px;
   overflow: hidden;
   text-align: center;
@@ -63,38 +60,6 @@ body {
 }
 .link {
   color: #337ab7;
-}
-.category {
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 16pt;
-  vertical-align: middle;
-}
-.clue-table {
-  height: 100%;
-  width: 100%;
-}
-.clue.box {
-  font-family: serif;
-  font-size: 14pt;
-  height: 150px;
-}
-.clue-header {
-  font-family: sans-serif;
-  font-size: 12pt;
-  text-align: center;
-  color: #e3e800;
-}
-.clue-body {
-  vertical-align: middle;
-}
-.clue-table {
-  border: 0px;
-  padding: 0px;
-  margin: 0px;
-}
-.response-results {
-  color: #5cb85c;
 }
 
 .edit-box {
