--- a/app/views/clues/index.html.erb
+++ b/app/views/clues/index.html.erb
@@ -21,7 +21,7 @@
         <div class='list-group-item list-group-item-action'>
           <h4>
             <%= clue.category.name %>
-            <span class="value"><%= clue.value %></span>
+            <span class="value-results"><%= clue.value %></span>
             <span class="pull-right">
               <%= link_to clue.episode.air_date.to_s, episode_path(clue.episode) %>
             </span>
