--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="episode-container">
   <h3><%= @episode.air_date %></h3>
   <span class="h1"><%= @episode.title %>
     <%= link_to "Index", episodes_path, class: "h4 link" %>
@@ -114,7 +114,7 @@
   <ul>
     <% @episode.appearances.each do |a|%>
         <li><span class="h4">
-          <%= link_to a.contestant.name, contestant_path(a.contestant) %></span>: 
+          <%= link_to a.contestant.name, contestant_path(a.contestant) %></span>:
           <%= a.total %></li>
     <% end %>
   </ul>
