--- a/app/assets/stylesheets/episodes_show.scss
+++ b/app/assets/stylesheets/episodes_show.scss
@@ -1,7 +1,5 @@
 
 $box_shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-$debug_border: 1px solid red;
-//$debug_border: none;
 
 @mixin radial-gradient {
   background: #3240ff;
@@ -11,6 +9,15 @@ $debug_border: 1px solid red;
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0c20ff', endColorstr='#00029b',GradientType=1 );
 }
 
+@mixin block-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.episode-container {
+  @include block-center;
+  max-width: 1200px;
+}
 table.board {
   @include radial-gradient;
   text-shadow: 2px 2px 2px black;
@@ -35,6 +42,7 @@ table.final {
   box-shadow: $box_shadow;
 }
 
+// Category becomes the button for the final
 .category.box.final {
   color: #e3e800;
   font-size: 22px;
@@ -88,7 +96,7 @@ table.final {
     text-align: left;
     color: white;
     width: 10%;
-  } 
+  }
   .value {
     text-align: center;
     color: #e3e800;
@@ -101,6 +109,7 @@ table.final {
     text-shadow: none;
     width: 10%;
   }
+
 }
 .clue-body {
   height: 100%;
