--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,27 +3,25 @@
   <head>
     <title>SjArchive</title>
     <%= csrf_meta_tags %>
-  
-    <script src="https://use.fontawesome.com/8702ac210d.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag 'application' %>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-83877502-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   <body>
 
-  <div class="container-fluid main">
+  <div class="container main">
     <%= flash_messages %>
     <%= yield %>
   </div>
   <footer>
     <%= debug(params) if Rails.env.development? %>
   </footer>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-83877502-1', 'auto');
+    ga('send', 'pageview');
+  </script>
   </body>
 </html>
